Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P0: Blocker
-
Resolution: Done
-
Affects Version/s: 5.15.2
-
Fix Version/s: 5.15.2
-
Component/s: Tools: Linguist
-
Labels:None
-
Commits:Ie31353911be2de908f53e9b84d6b819677ad946b (qt/qttools/5.15.2)
Description
agent:2020/11/04 05:42:42 build.go:379: make[3]: Leaving directory '/home/qt/work/qt/qttools/src/linguist/lconvert' agent:2020/11/04 05:42:42 build.go:379: Makefile:52: recipe for target 'sub-lconvert-make_first' failed agent:2020/11/04 05:42:42 build.go:379: make[2]: *** [sub-lconvert-make_first] Error 2 agent:2020/11/04 05:42:42 build.go:379: make[2]: *** Waiting for unfinished jobs.... agent:2020/11/04 05:42:42 build.go:379: g++ -c -pipe -O2 -std=c++11 -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_LINKED_LIST -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.15.2"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=15 -DQT_VERSION_PATCH=2 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I../shared -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/5.15.2 -I/home/qt/work/install/include/QtCore/5.15.2/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/5.15.2 -I/home/qt/work/install/include/QtXml/5.15.2/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/numerus.o ../shared/numerus.cpp agent:2020/11/04 05:42:42 build.go:379: g++ -c -pipe -O2 -std=c++11 -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_LINKED_LIST -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DPROEVALUATOR_CUMULATIVE -DPROEVALUATOR_INIT_PROPS -DQMAKE_BUILTIN_PRFS -DQMAKE_OVERRIDE_PRFS -DPROEVALUATOR_DEBUG -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.15.2"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=15 -DQT_VERSION_PATCH=2 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I../shared -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/5.15.2 -I/home/qt/work/install/include/QtCore/5.15.2/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/5.15.2 -I/home/qt/work/install/include/QtXml/5.15.2/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/qmakeevaluator.o ../shared/qmakeevaluator.cpp agent:2020/11/04 05:42:42 build.go:379: g++ -c -pipe -O2 -std=c++11 -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_LINKED_LIST -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.15.2"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=15 -DQT_VERSION_PATCH=2 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I../shared -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/5.15.2 -I/home/qt/work/install/include/QtCore/5.15.2/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/5.15.2 -I/home/qt/work/install/include/QtXml/5.15.2/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/translator.o ../shared/translator.cpp agent:2020/11/04 05:42:43 build.go:379: g++ -c -pipe -O2 -std=c++11 -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_LINKED_LIST -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.15.2"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=15 -DQT_VERSION_PATCH=2 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I../shared -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/5.15.2 -I/home/qt/work/install/include/QtCore/5.15.2/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/5.15.2 -I/home/qt/work/install/include/QtXml/5.15.2/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/translatormessage.o ../shared/translatormessage.cpp agent:2020/11/04 05:42:43 build.go:379: ../shared/numerus.cpp:165:5: error: ‘Bihari’ is not a member of ‘QLocale’ agent:2020/11/04 05:42:43 build.go:379: QLocale::Bihari, agent:2020/11/04 05:42:43 build.go:379: ^ agent:2020/11/04 05:42:43 build.go:379: ../shared/numerus.cpp:295:54: error: ‘Tagalog’ is not a member of ‘QLocale’ agent:2020/11/04 05:42:43 build.go:379: static const QLocale::Language tagalogLanguage[] = { QLocale::Tagalog, EOL }; agent:2020/11/04 05:42:43 build.go:379: ^ agent:2020/11/04 05:42:43 build.go:379: Makefile:764: recipe for target '.obj/numerus.o' failed agent:2020/11/04 05:42:43 build.go:379: make[3]: *** [.obj/numerus.o] Error 1 agent:2020/11/04 05:42:43 build.go:379: make[3]: *** Waiting for unfinished jobs.... agent:2020/11/04 05:42:43 build.go:379: g++ -c -pipe -O2 -std=c++11 -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_LINKED_LIST -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DPROEVALUATOR_CUMULATIVE -DPROEVALUATOR_INIT_PROPS -DQMAKE_BUILTIN_PRFS -DQMAKE_OVERRIDE_PRFS -DPROEVALUATOR_DEBUG -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.15.2"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=15 -DQT_VERSION_PATCH=2 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I../shared -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/5.15.2 -I/home/qt/work/install/include/QtCore/5.15.2/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/5.15.2 -I/home/qt/work/install/include/QtXml/5.15.2/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/qmakebuiltins.o ../shared/qmakebuiltins.cpp agent:2020/11/04 05:42:43 build.go:379: g++ -c -pipe -O2 -std=c++11 -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_LINKED_LIST -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DPROEVALUATOR_CUMULATIVE -DPROEVALUATOR_INIT_PROPS -DQMAKE_BUILTIN_PRFS -DQMAKE_OVERRIDE_PRFS -DPROEVALUATOR_DEBUG -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.15.2"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=15 -DQT_VERSION_PATCH=2 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I../shared -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/5.15.2 -I/home/qt/work/install/include/QtCore/5.15.2/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/5.15.2 -I/home/qt/work/install/include/QtXml/5.15.2/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/profileevaluator.o ../shared/profileevaluator.cpp agent:2020/11/04 05:42:43 build.go:379: g++ -c -pipe -O2 -std=c++11 -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_LINKED_LIST -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DPROEVALUATOR_CUMULATIVE -DPROEVALUATOR_INIT_PROPS -DQMAKE_BUILTIN_PRFS -DQMAKE_OVERRIDE_PRFS -DPROEVALUATOR_DEBUG -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.15.2"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=15 -DQT_VERSION_PATCH=2 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I../shared -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/5.15.2 -I/home/qt/work/install/include/QtCore/5.15.2/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/5.15.2 -I/home/qt/work/install/include/QtXml/5.15.2/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/qrcreader.o ../shared/qrcreader.cpp agent:2020/11/04 05:42:43 build.go:379: g++ -c -pipe -O2 -std=c++11 -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_LINKED_LIST -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DPROEVALUATOR_CUMULATIVE -DPROEVALUATOR_INIT_PROPS -DQMAKE_BUILTIN_PRFS -DQMAKE_OVERRIDE_PRFS -DPROEVALUATOR_DEBUG -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.15.2"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=15 -DQT_VERSION_PATCH=2 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I../shared -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/5.15.2 -I/home/qt/work/install/include/QtCore/5.15.2/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/5.15.2 -I/home/qt/work/install/include/QtXml/5.15.2/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/main.o main.cpp agent:2020/11/04 05:42:45 build.go:379: make[3]: Leaving directory '/home/qt/work/qt/qttools/src/linguist/lrelease' agent:2020/11/04 05:42:45 build.go:379: Makefile:102: recipe for target 'sub-lrelease-make_first' failed agent:2020/11/04 05:42:45 build.go:379: make[2]: *** [sub-lrelease-make_first] Error 2 agent:2020/11/04 05:42:47 build.go:379: g++ -Wl,-O1 -Wl,--gc-sections -o ../../../bin/lprodump .obj/ioutils.o .obj/qmakevfs.o .obj/proitems.o .obj/qmakeglobals.o .obj/qmakeparser.o .obj/qmakeevaluator.o .obj/qmakebuiltins.o .obj/profileevaluator.o .obj/qrcreader.o .obj/main.o /home/qt/work/install/lib/libQt5Bootstrap.a -lpthread agent:2020/11/04 05:42:47 build.go:379: make[3]: Leaving directory '/home/qt/work/qt/qttools/src/linguist/lprodump' agent:2020/11/04 05:42:47 build.go:379: make[2]: Leaving directory '/home/qt/work/qt/qttools/src/linguist' agent:2020/11/04 05:42:47 build.go:379: Makefile:156: recipe for target 'sub-linguist-make_first' failed agent:2020/11/04 05:42:47 build.go:379: make[1]: *** [sub-linguist-make_first] Error 2 agent:2020/11/04 05:42:47 build.go:379: make[1]: *** Waiting for unfinished jobs.... agent:2020/11/04 05:43:03 build.go:379: make[2]: Leaving directory '/home/qt/work/qt/qttools/src/qdoc' agent:2020/11/04 05:43:03 build.go:379: make[1]: Leaving directory '/home/qt/work/qt/qttools/src' agent:2020/11/04 05:43:03 build.go:379: Makefile:48: recipe for target 'sub-src-make_first' failed agent:2020/11/04 05:43:03 build.go:379: make: *** [sub-src-make_first] Error 2 agent:2020/11/04 05:43:03 build.go:430: Process finished with error: exit status 2 agent:2020/11/04 05:43:03 build.go:654: Executing scheduled instruction 1 of 1 - Upload all core dumps if there are some agent:2020/11/04 05:43:03 build.go:563: Skip uploading core files because CORE_FILES_PATH is not set in the environment agent:2020/11/04 05:43:03 build.go:662: agent:2020/11/04 05:43:03 agent.go:280: Build failed agent:2020/11/04 05:43:03 agent.go:202: ERROR building: exit status 2 INFO:workitem.py:644(33592): Agent FINISHED FAIL: <could not determine failure location - check log: /mnt/coin-storage-01/ci-working-dir/storage/qt/qttools/f8b4b7eb1f8af1a4686e494f86e93a387cb9c39b/LinuxRHEL_7_6x86_64QNXQNX_700armv7GCCqtci-linux-RHEL-7.6-x86_64-28cdf2DisableTests/4461d81139205fd546acc2769e89b6352b9a7cdc/build_1604467855/log.txt.gz>: qt/qttools/f8b4b7eb1f8af1a4686e494f86e93a387cb9c39b/LinuxRHEL_7_6x86_64QNXQNX_700armv7GCCqtci-linux-RHEL-7.6-x86_64-28cdf2DisableTests/4461d81139205fd546acc2769e89b6352b9a7cdc/Build INFO:workitem.py:726(33592): <a href="https://qtmetrics.intra.qt.io/d/nOAsINmZz/jimis-telegraf-vms?orgId=1&from=1604468523000&to=1604468584000&var-server=1603775948-70543">VM metrics</a> INFO:workitem.py:728(33592): <a href="https://qtmetrics.intra.qt.io/d/nOAsINNZz/jimis-telegraf-hosts?orgId=1&from=1604468523000&to=1604468584000&var-server=pure-bear">Host metrics</a>
Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1604467397
Tested changes (refs/builds/qtci/5.15.2/1604467395):
https://codereview.qt-project.org/c/qt/qt5/+/319969/1 Update submodules on '5.15.2' in qt/qt5