Clear out deprecated QLocale::Language values

CLDR provides no Bihari locale data, so we're retiring it.
Tagalog is now called Filipino.
Various aliases mentioned in comments are going away.

Task-number: QTBUG-88167
Change-Id: Ie31353911be2de908f53e9b84d6b819677ad946b
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 7268647fd5f911303a507fd5cc7c3feb48bb253f)
Reviewed-by: Robert Loehning <robert.loehning@qt.io>